Fix width of the #tree element being too small

--- a/webapp/styles/groups/tree.scss
+++ b/webapp/styles/groups/tree.scss
@@ -15,7 +15,7 @@
 }
 
 #tree {
-  max-width: fit-content;
+  width: max-content;
   overflow: visible;
   white-space: nowrap;
 }
